fixed light and dark mode error when no card were being displayed and the drak mode was not registered after card display

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -23,14 +23,10 @@
 .similar-classes {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 60px;
     justify-items: center; /* Center items horizontally */
   align-items: center; /* Center items vertically */
 }
-
-/* From uiverse.io by @satyamchaudharydev */
-/* this button is inspired by -- whatsapp input */
-/* == type to see fully interactive and click the close buttom to remove the text  == */
 
 .form {
     --input-bg: #FFf;
@@ -49,7 +45,7 @@
    /*  change this for padding in the end of input */
     background: var(--input-bg);
     position: relative;
-    border-radius: 4px;
+    border-radius: 25px;
     width: 90vw;
     box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15), 0 6px 12px 0 rgba(24, 94, 224, 0.15);
     margin-top: 25px;
